--- a/customer/src/main/resources/application.yml
+++ b/customer/src/main/resources/application.yml
@@ -1,6 +1,18 @@
 server:
-  port: 8081
+  port: 8080
 
 spring:
   application:
     name: customer
+  datasource:
+    username: ${POSTGRESDBUSER}
+    password: ${POSTGRESDBPASSWORD}
+    url: ${POSTGRESDBURL}
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+    show-sql: true
