--- a/fraud/pom.xml
+++ b/fraud/pom.xml
@@ -7,10 +7,10 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>customer</artifactId>
+    <artifactId>fraud</artifactId>
     <packaging>jar</packaging>
 
-    <name>customer</name>
+    <name>fraud</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -37,7 +37,6 @@
             <groupId>com.khomsi</groupId>
             <artifactId>clients</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
