--- a/fraud/src/main/resources/application.yml
+++ b/fraud/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8080
+  port: 8081
 
 spring:
   application:
-    name: customer
+    name: fraud
   datasource:
     username: ${POSTGRESDBUSER}
     password: ${POSTGRESDBPASSWORD}
@@ -20,5 +20,5 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
-      fetch-registry: true
-      register-with-eureka: true
+    fetch-registry: true
+    register-with-eureka: true
