--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>fraud</module>
         <module>eureka-server</module>
         <module>clients</module>
+        <module>notification</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
