--- a/customer/src/main/resources/application.yml
+++ b/customer/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
   port: 8080
-
+management:
+  metrics:
+    export:
+      zipkin:
+        enabled: true
 spring:
   application:
     name: customer
@@ -16,6 +20,8 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
     show-sql: true
+  zipkin:
+    base-url: http://localhost:9411
 eureka:
   client:
     service-url:
