--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -3,7 +3,14 @@ server:
 spring:
   application:
     name: eureka-server
+  zipkin:
+    base-url: http://localhost:9411
 eureka:
   client:
     fetch-registry: false
     register-with-eureka: false
+management:
+  metrics:
+    export:
+      zipkin:
+        enabled: true
