--- a/apigw/src/main/resources/application-docker.yml
+++ b/apigw/src/main/resources/application-docker.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: apigw
   zipkin:
-    base-url: http://localhost:9411
+    base-url: http://zipkin:9411
   cloud:
     discovery:
       enabled: true
@@ -18,4 +18,4 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://eureka-server:8761/eureka
