--- a/fraud/src/main/resources/application.yml
+++ b/fraud/src/main/resources/application.yml
@@ -1,13 +1,12 @@
 server:
   port: 8081
-
 spring:
   application:
     name: fraud
   datasource:
-    username: ${POSTGRESDBUSER}
-    password: ${POSTGRESDBPASSWORD}
-    url: ${POSTGRESDBURL}
+    username: microservice
+    password: password
+    url: jdbc:postgresql://localhost:5432/fraud
   jpa:
     hibernate:
       ddl-auto: create-drop
@@ -18,9 +17,13 @@ spring:
     show-sql: true
   zipkin:
     base-url: http://localhost:9411
+  profiles:
+    active: default
+
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
     fetch-registry: true
     register-with-eureka: true
+    enabled: true
