--- a/customer/src/main/resources/application-kube.yml
+++ b/customer/src/main/resources/application-kube.yml
@@ -1,29 +1,28 @@
 server:
-  port: 8081
+  port: 8080
 spring:
   application:
-    name: fraud
+    name: customer
   datasource:
     username: microservice
     password: password
-    url: jdbc:postgresql://localhost:5432/fraud
+    url: jdbc:postgresql://postgres:5432/customer
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
     show-sql: true
   zipkin:
-    base-url: http://localhost:9411
-  profiles:
-    active: default
-
+    base-url: http://zipkin
+  rabbitmq:
+    addresses: rabbitmq:5672
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://eureka-server:8761/eureka
     fetch-registry: true
     register-with-eureka: true
     enabled: false
